# chunkymonkey

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  README.md  benchmark-design.md  enchancements.md  enhancements.md  public-benchmark-design.md  pyproject.toml
.githooks/: post-commit
chunkeymonkey/: __init__.py  chunking.py  context.py  loader.py  models.py
chunkeymonkey/extractors/: __init__.py  _docx.py  _html.py  _mime.py  _pdf.py  _pptx.py  _protocol.py  _text.py  _xlsx.py
chunkeymonkey/storage/: __init__.py  _pool.py  _protocol.py  _relational.py  _schema.py  _store.py  _vector.py
chunkeymonkey/transports/: __init__.py  _ftp.py  _http.py  _local.py  _protocol.py  _s3.py  _sftp.py
chunkymonkey/: __init__.py  chunking.py  context.py  loader.py  models.py
chunkymonkey/cluster/: __init__.py  _clusterer.py  _cooccurrence.py  _map.py
chunkymonkey/extractors/: __init__.py  _csv.py  _docx.py  _edgar.py  _email.py  _html.py  _json.py  _markdown.py  _mime.py  _odf.py  _pdf.py  _pptx.py  _protocol.py  _text.py  _xlsx.py  _xml.py  _yaml.py
chunkymonkey/ner/: __init__.py  _index.py  _merge.py  _spacy.py  _spacy_labels.py  _vocabulary.py
chunkymonkey/search/: __init__.py  _enhanced.py
chunkymonkey/storage/: __init__.py  _pool.py  _protocol.py  _relational.py  _schema.py  _store.py  _vector.py
chunkymonkey/transports/: __init__.py  _crawler_protocol.py  _directory_crawler.py  _ftp.py  _http.py  _imap.py  _local.py  _protocol.py  _s3.py  _sftp.py  _sqlalchemy.py  _web_crawler.py
demo/: benchmark.py  clinicaltrials_demo.py  contextual_vs_naive.py  edgar_demo.py  edgar_scale_demo.py  generate_office_docs.py  graphrag_bench.py  python_docs_demo.py  sample_doc.md
demo/docs/: architecture_review.docx  incident_log.md  ops_report.md  product_catalog.md  qbr_presentation.pptx  sales_pipeline.xlsx
examples/: basic_chunking.py  contextual_chunking.py  custom_extractor.py  custom_transport.py
scripts/: canary_stamp.py
tests/integration/: test_crawler.py  test_edgar_pipeline.py  test_loader.py  test_storage.py
tests/unit/: test_chunking.py  test_clinicaltrials.py  test_cluster.py  test_context.py  test_edgar_extractor.py  test_enhanced_search.py  (+4 more)
