[project]
name = "chunkymonkey"
version = "0.1.0"
description = "A dairy-free RAG pipeline for delicious semantic similarity, clustering and NER."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "black>=26.0",
]
http    = ["requests>=2.32", "certifi>=2024.0"]
s3      = ["boto3>=1.42"]
sftp    = ["paramiko>=3.4"]
pdf     = ["pypdf>=6.6"]
docx    = ["python-docx>=1.2"]
xlsx    = ["openpyxl>=3.1"]
pptx    = ["python-pptx>=1.0"]
yaml    = ["pyyaml>=6.0"]
odf     = ["odfpy>=1.4"]
storage = ["duckdb>=1.4", "numpy>=2.0", "sqlalchemy>=2.0", "duckdb-engine>=0.13"]
cluster = ["scikit-learn>=1.5", "numpy>=2.0"]
leiden  = ["igraph>=0.11", "leidenalg>=0.10"]
full    = [
    "chunkymonkey[http,s3,sftp]",
    "chunkymonkey[pdf,docx,xlsx,pptx,yaml,odf]",
    "chunkymonkey[storage]",
    "chunkymonkey[cluster]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chunkymonkey"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
